# dhall-surgical-freeze

./: .dir-locals.el  CHANGELOG.md  LICENSE  default.nix  dhall-surgical-freeze.cabal  flake.nix
src/Freeze/: Lib.hs
